# FYP

./: .gitignore  README.md  TODO.md  UWB_ReadUDP.py  UWB_SendUDP.py  UWB_Viz4.py  combine.py  run_process.py  tello_client_fixed.py  tello_proxy_fixed.py  test.py  testclient.py  testcustomtello.py  waypoint20x20.json  waypoints_samplesmall.json  wpfinal_USAGAB11_straightonly.json  wpfinal_USAGAB12.json  wpfinal_USAGAB12_straightonly.json  wpfinal_USAGAB13.json  wpfinal_USAGAB13_straightonly.json  wpfinal_USAYZ17_straightonly.json
0 Diagnostics/: RPi Networking Swarmify Notes.txt  generate_file_struct.py  learn.py  load_torch.py  powershell connect rpi GUI v7.py  print_imuheading.py  print_pcconfigs.py  print_tello_battery.py  set_videoframeresol.py  tello_commands.py  testclient_standalone.py  videostream.py
0Archive/: TEST_markerstatusdict.py  TEST_pidheight.py  TEST_pidrotate.py
0Diagnostics/: connectrpiGUI.py  detect_aruco.py  learn2_recursion.py  learn3_argparse.py  learn5_debug.py  logging_boilerplate.py  set_apmode.py  tello_commands.py  testclient_standalone.py  testcustomtello.py  testcustomtello2.py  testcustomtello3.py
PPFLY/: constants.py  main.py
PPFLY2/: README.md  constants.py  main.py  utils.py
PPGUI/: README.md  config.py  constants.py  main.py  main_backup.py  utils.py
Search/: Instant_land.py  Marker_PP_RPI_5.4_JSON.py  Searcher_halfbaked19feb.py  main.py  utils.py
TEST_Swarmify/: swarmifly.py  swarmifly2.py
Test_Archive/: TEST_arucodistbtw.py  TEST_import.py  TEST_pid.py
UWBViz/: README.md  constants.py  main.py  main_v2.py  map_generator.py  recordingmanager.py  utils.py
UWB_Wrapper/: README.md  UWB_Fly PID.py  UWB_Fly square.py  UWB_Fly.py  (+4 more)
nlink_unpack-master/: CMakeLists.txt  README.md  main_txt.c  main_udp.c  main_udp2Hz.c  main_udpHz.c  main_udpmedian.c  main_udpmedianv2.c
nlink_unpack-master/lib/: json-c-static.lib  json-c.lib
nlink_unpack-master/lib/pkgconfig/: json-c.pc
(+92 files in other folders)
